--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,7 +140,19 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:26.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
+
+    implementation "com.facebook.android:facebook-android-sdk:[4,5)"   
+    compile project(":react-native-fbsdk")  
+    implementation(project(":react-native-google-signin")) {
+        exclude group: "com.google.android.gms" // very important
+    }
+    implementation 'com.google.android.gms:play-services-auth:15.0.0'
+    // should be at least 15.0.0 to work with most recent APIS
+    compile 'com.google.firebase:firebase-core:16.0.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
