--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,5 +22,14 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
+}
+ext {
+    compileSdkVersion           = 26
+    targetSdkVersion            = 26
+    buildToolsVersion           = "26.0.2"
+    googlePlayServicesVersion   = "12.0.1"
+    supportLibVersion           = "26.0.2"
 }
