--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "radio-button-react-native": "^1.1.6",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-camera": "^1.1.4",
     "react-native-fbsdk": "^0.7.0",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-google-signin": "^0.12.0",
     "react-navigation": "^2.5.5"
   },
