Revert "remove camera"
This reverts commit e603a3f9809fc476e6c41c9c55e47843eb6561fb.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,10 +149,10 @@ dependencies {
         exclude group: "com.google.android.gms" // very important
     }
     implementation 'com.google.android.gms:play-services-auth:15.0.0'
-    
+    implementation 'com.android.support:exifinterface:+'
     // should be at least 15.0.0 to work with most recent APIS
     implementation 'com.google.firebase:firebase-core:16.0.0'
-    
+    implementation project(':react-native-camera')
 }
 
 apply plugin: 'com.google.gms.google-services'
